# item-app-yolo-v3

./: .dockerignore  .gitignore  .terraform.lock.hcl  Dockerfile  app.py  cloud_function.py  main.py  main.tf  pushing_to_gcp_artifact_store.txt  pyproject.toml  steps.txt
notes/: steps.txt  terraform_roles.txt
terraform/: main.tf
